--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,16 +30,28 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  font_awesome_flutter: ^10.5.0
-
+  font_awesome_flutter: ^10.6.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-#  material_design_icons_flutter: 7.0.7296
+  http: ^1.1.2
+  cached_network_image: ^3.3.1
+  flutter_rating_bar: ^4.0.1
+  custom_rating_bar: ^2.0.5
+  firebase_auth: ^4.15.3
+  firebase_core: any
+  firebase_storage: ^11.2.4
+  cloud_firestore: ^4.8.2
+  fluttertoast: ^8.2.4
+  google_sign_in: ^6.2.1
+  flutter_login_facebook: ^1.9.0
+  google_login: ^1.0.2
+  get: ^4.6.6
+  path_provider: ^2.1.2
+  qr_flutter: ^4.1.0
 
-#  flutter_svg: ^1.0.3
-#  flutter_svg: ^2.0.7
+
 
 dev_dependencies:
   flutter_test:
